# rust-actix-api

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
config/: Cargo.toml
config/src/: app_state.rs  database.rs  envs.rs  lib.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
models/: Cargo.toml
models/src/: product.rs
products/: Cargo.toml
products/src/: handlers.rs  lib.rs  queries.rs  responses.rs  routes.rs
src/: main.rs
