workspace = { members = [ "config", "models","products", "migration"] }

[package]
name = "web-server-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
products = { path = "./products" }
models = { path = "./models" }
config = { path = "./config" }

actix-web = "4"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }




